<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    >

    <LinearLayout
        android:id="@+id/firstLinear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintVertical_bias="0.5"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        >

        <TextView
            android:id="@+id/textParentUsername"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:text="@string/text_text_parent_username"
            android:textSize="24sp"
            />

        <EditText
            android:id="@+id/editParentUsername"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:background="@drawable/textview_border"
            android:ems="10"
            android:hint="@string/hint_edit_parent_username"
            android:inputType="textPersonName"
            android:text="s"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textChildUsername"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:layout_marginTop="32dp"
            android:text="@string/text_text_child_username"
            android:textSize="24sp"
            />

        <EditText
            android:id="@+id/editChildUsername"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:background="@drawable/textview_border"
            android:ems="10"
            android:hint="@string/hint_edit_child_username"
            android:inputType="textPersonName"
            android:text="o"
            android:textSize="24sp" />

        <Button
            android:id="@+id/buttonReportLocation"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:layout_marginTop="32dp"
            android:onClick="buttonClickedReportLocation"
            android:text="@string/text_button_report_location"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearError"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        >

        <TextView
            android:id="@+id/textError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/colorRed"
            android:textSize="24sp"
            android:textStyle="bold"
            />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>